--- a/src/app.postcss
+++ b/src/app.postcss
@@ -126,6 +126,7 @@ html {
 	--font-size-4: 2.4rem;
 	--font-size-5: 4.8rem;
 	--font-size-6: 9.6rem;
+	--font-size-55: 4.6rem;
 
 	/* sizes */
 	--size-0: 0.4rem;
